--- a/views/propiedades/admin.pug
+++ b/views/propiedades/admin.pug
@@ -34,9 +34,11 @@ block contenido
 								div(class="sm:w-1/4 md:w-2/6 lg:flex-1 flex flex-row gap-2")
 									form(action="") 
 										input(type="submit" class=`w-full px-2 py-2 md:text-xs leading-5 font-semibold rounded cursor-pointer ${propiedad.publicado ? 'bg-green-100 text-green-800' : 'bg-yellow-100 text-yellow-800'}` value=`${propiedad.publicado ? 'Publicado' : 'No Publicado'}`)
-									a(href="#" class="text-center px-2 py-2 md:text-xs leading-5 font-semibold rounded cursor-pointer bg-indigo-100 text-indigo-800") Editar
+									a(href=`/propiedades/editar/${propiedad.id}` class="text-center px-2 py-2 md:text-xs leading-5 font-semibold rounded cursor-pointer bg-indigo-100 text-indigo-800") Editar
 
-									form(action="") 
+									form(method="POST" action=`/propiedades/eliminar/${propiedad.id}`)
+										input(type="hidden" name="_csrf" value= csrfToken)
 										input(type="submit" class='text-center w-full px-2 py-2 md:text-xs leading-5 font-semibold rounded cursor-pointer bg-red-100 text-red-800' value="Eliminar")
-		else 
+		
+		else
 			p(class="text-center") No Hay Propiedades
